--- a/app/src/main/res/layout/row_event.xml
+++ b/app/src/main/res/layout/row_event.xml
@@ -56,7 +56,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"            android:textSize="14sp"
+            android:layout_marginEnd="8dp"
+            android:textSize="14sp"
             android:textColor="#00A"
             android:text="TextView"
             app:layout_constraintEnd_toEndOf="parent"
